# gd32e51x-demo-suites-cmake-vscode

./: .gitmodules  README.md
Drivers/BSP/GD32E517R_START/: gd32e517r_start.c  gd32e517r_start.h
Drivers/BSP/GD32E517V_START/: gd32e517v_start.c  gd32e517v_start.h
Drivers/BSP/GD32E517Z_EVAL/: gd32e517z_eval.c  gd32e517z_eval.h  gd32e517z_lcd_eval.c  gd32e517z_lcd_eval.h  lcd_font.h
Drivers/BSP/GD32E518C_START/: gd32e518c_start.c  gd32e518c_start.h
Drivers/GD32E51x_standard_peripheral/Include/: gd32e51x_adc.h  gd32e51x_bkp.h  gd32e51x_can.h  gd32e51x_cmp.h  gd32e51x_crc.h  gd32e51x_ctc.h  gd32e51x_dac.h  gd32e51x_dbg.h  gd32e51x_dma.h  gd32e51x_enet.h  gd32e51x_exmc.h  gd32e51x_exti.h  gd32e51x_fmc.h  gd32e51x_fwdgt.h  gd32e51x_gpio.h  gd32e51x_i2c.h  gd32e51x_misc.h  gd32e51x_pmu.h  gd32e51x_rcu.h  gd32e51x_rtc.h  gd32e51x_sdio.h  gd32e51x_shrtimer.h  gd32e51x_spi.h  gd32e51x_sqpi.h  gd32e51x_timer.h  gd32e51x_tmu.h  gd32e51x_usart.h  gd32e51x_wwdgt.h
Drivers/GD32E51x_standard_peripheral/Source/: gd32e51x_adc.c  gd32e51x_bkp.c  gd32e51x_can.c  gd32e51x_cmp.c  gd32e51x_crc.c  gd32e51x_ctc.c  gd32e51x_dac.c  gd32e51x_dbg.c  gd32e51x_dma.c  gd32e51x_enet.c  gd32e51x_exmc.c  gd32e51x_exti.c  gd32e51x_fmc.c  gd32e51x_fwdgt.c  gd32e51x_gpio.c  gd32e51x_i2c.c  gd32e51x_misc.c  gd32e51x_pmu.c  gd32e51x_rcu.c  gd32e51x_rtc.c  gd32e51x_sdio.c  gd32e51x_shrtimer.c  gd32e51x_spi.c  gd32e51x_sqpi.c  gd32e51x_timer.c  gd32e51x_tmu.c  gd32e51x_usart.c  gd32e51x_wwdgt.c
Drivers/GD32E51x_usbd_library/device/Include/: usb_ch9_std.h  usbd_core.h  usbd_enum.h  usbd_pwr.h  usbd_transc.h
Drivers/GD32E51x_usbd_library/device/Source/: usbd_core.c  usbd_enum.c  usbd_pwr.c  usbd_transc.c
Drivers/GD32E51x_usbd_library/usbd/Include/: usbd_lld_core.h  usbd_lld_int.h  usbd_lld_regs.h
Drivers/GD32E51x_usbd_library/usbd/Source/: usbd_lld_core.c  usbd_lld_int.c
Drivers/GD32E51x_usbhs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
Drivers/GD32E51x_usbhs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
Drivers/GD32E51x_usbhs_library/ustd/common/: usb_ch9_std.h
Projects/GD32E517R_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E517R_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E517R_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E517R_START/03_EXTI_Key_Interrupt_mode/Drivers/BSP/GD32E517R_START/: CMakeLists.txt
Projects/GD32E517R_START/04_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32E517R_START/04_USART_HyperTerminal_Interrupt/cmake/: project.cmake
Projects/GD32E517R_START/05_TIMER_Key_EXTI/: CMakeLists.txt
Projects/GD32E517R_START/05_TIMER_Key_EXTI/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517R_START/06_USB_MSC_Device/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517R_START/07_USB_HID_Host/: CMakeLists.txt
Projects/GD32E517R_START/07_USB_HID_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517V_START/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E517V_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E517V_START/02_GPIO_Key_Polling_mode/Drivers/GD32E51x_standard_peripheral/: CMakeLists.txt
Projects/GD32E517V_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E517V_START/04_USART_HyperTerminal_Interrupt/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517V_START/05_TIMER_Key_EXTI/: CMakeLists.txt  GD32E51x_CL.svd
Projects/GD32E517V_START/05_TIMER_Key_EXTI/Application/: readme.txt
Projects/GD32E517V_START/06_USB_MSC_Device/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517V_START/06_USB_MSC_Device/Drivers/BSP/GD32E517V_START/: CMakeLists.txt
Projects/GD32E517V_START/07_USB_HID_Host/: CMakeLists.txt
Projects/GD32E517V_START/07_USB_HID_Host/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517Z_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32E517Z_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32E517Z_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32E517Z_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32E517Z_EVAL/11_DAC_Output_Voltage_Value/: CMakeLists.txt
Projects/GD32E517Z_EVAL/16_EXMC_TouchScreen/Drivers/BSP/GD32E517Z_EVAL/: CMakeLists.txt
Projects/GD32E517Z_EVAL/24_ENET_FreeRTOS_tcpudp/: CMakeLists.txt
Projects/GD32E517Z_EVAL/24_ENET_FreeRTOS_tcpudp/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517Z_EVAL/24_ENET_FreeRTOS_tcpudp/Application/Core/Inc/: gd32e51x_enet_eval.h  gd32e51x_it.h  lwipopts.h  main.h  netconf.h  tcp_client.h  udp_echo.h
Projects/GD32E517Z_EVAL/24_ENET_FreeRTOS_tcpudp/Application/Core/Src/: gd32e51x_enet_eval.c  gd32e51x_it.c  hello_gigadevice.c  main.c  netconf.c  tcp_client.c  udp_echo.c
Projects/GD32E517Z_EVAL/24_ENET_Raw_tcpudp/: CMakeLists.txt
Projects/GD32E517Z_EVAL/24_ENET_Raw_webserver/Application/: CMakeLists.txt  readme.txt
Projects/GD32E517Z_EVAL/24_ENET_Raw_webserver/Application/Core/Inc/: fs.h  gd32e51x_it.h  lwipopts.h  main.h  netconf.h
Projects/GD32E517Z_EVAL/24_ENET_Raw_webserver/Application/Core/Src/: fsdata.c  gd32e51x_enet_eval.c  gd32e51x_it.c  http_adc_led.c  httpd.c  main.c  netconf.c
Projects/GD32E517Z_EVAL/24_ENET_Raw_webserver/Application/lwip/port/GD32E51x/FreeRTOS/: ethernetif.c
Projects/GD32E517Z_EVAL/25_USBHS_USB_Device_HID_Keyboard/: CMakeLists.txt
Projects/GD32E517Z_EVAL/25_USBHS_USB_Device_HID_Keyboard/Drivers/GD32E51x_usbhs_library/: CMakeLists.txt
Projects/GD32E517Z_EVAL/25_USBHS_USB_Host_MSC/: CMakeLists.txt
Projects/GD32E518C_START/01_GPIO_Running_LED/Drivers/BSP/GD32E518C_START/: CMakeLists.txt
Projects/GD32E518C_START/04_USART_HyperTerminal_Interrupt/: CMakeLists.txt
Projects/GD32E518C_START/07_USB_HID_Host/: CMakeLists.txt
Projects/GD32E518C_START/07_USB_HID_Host/Drivers/GD32E51x_usbhs_library/: CMakeLists.txt
(+344 files in other folders)
